# laundry-management-system

./: .gitignore  README.md  sample
.github/workflows/: frontent-tests.yml  node.js.yml
accounting-web/: .env.development  jsconfig.json  package-lock.json  package.json  tailwind.config.js  vite.config.js
accounting-web/src/: App.vue  main.js  style.css
accounting-web/tests/: test.spec.ts  tsconfig.json
api/: .env  .htaccess  README.md  composer.json
api/controllers/: ApiControllerV1.php  AuthController.php  BranchController.php  CustomerController.php  EmployeeController.php  FinancialAccountController.php  ItemController.php  LedgerRecordController.php  MigrationsController.php  OrderController.php  PaymentController.php  PriceCategoryController.php  ReportController.php  ServerStatusController.php  TaxController.php  UserController.php  UserRoleController.php
cashier-web/: .env.development  README.md  components.d.ts  package-lock.json  package.json  tailwind.config.js  todo.md  tsconfig.app.json  tsconfig.json  vite.config.ts  vue-virtual-scroller.d.ts
desktop-app/: README.md  index.html  main.js  package-lock.json  package.json  preload.js  test.js  trash_data.txt
print-service/: Cargo.toml
print-service/src/: main.rs
server/: README.md
tailwind-css/: tailwind-commands.text  tailwind.config.js
vue-web-design/: index.html  jsconfig.json  package-lock.json  package.json  tailwind.config.js  vite.config.js
website/: .env.example  .htaccess  branches.html  composer.json  employees.html  employees.php  index.html  products.html  users.html
(+342 files in other folders)
